PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- pts-core: Start moving possible deployment scripts into deploy/ directory
- pts-core: Move phoromatic-client and phoromatic-server Upstart job files to deploy/
- pts-core: Move phoromatic-client and phoromatic-server systemd service files to deploy/
- Pull in JuJu scripts from https://github.com/juju-solutions/pts to deploy/juju

Phoronix Test Suite 5.6.0-Dedilovo
24 March 2015

- pts-core: Drop bilde_renderer since it's been deprecated for a while
- pts-core: Yield /dev/mapper/* points in auto-disk-mount-points
- pts-core: Detect Internet presence for enterprise-setup
- pts-core: cli_set_process_title() still emits error on OS X so block its usage
- pts-core: Fix potential warning in detailed-system-info sub-command
- phodevi: HFS+ file-system fallback detection on OS X
- phodevi: Workaround Hyper Threading detection on OS X
- phoromatic: Add universal search functionality from web interface
- phoromatic: Improve formatting of annotations
- phoromatic: Mark system state as unknown when communication fails and hits the event server check
- phoromatic: Don't attempt to open DB in read-only mode if phoromatic.db not yet made

Phoronix Test Suite 5.6 Milestone 5
11 March 2015

- pts-core: Ignore test run locking in stress/multi-run mode
- pts-core: Allow 128 character result identifier strings
- pts-core: Switch the dump-documentation sub-command to generating the README in md format
- phoromatic: Change the custom From email sender to Reply-To
- phoromatic: Finish hooking-up multi-test/stress-run functionality via the benchmark page
- phoromatic: Send emails from rootadmin or group admin's email address where applicable rather than no-reply@
- phoromatic: Scroll bar on local suites page condensing
- phoromatic: Add "End Ticket" option to benchmark page
- phoromatic: Allow stress tests up to 90 days
- phoromatic: Allow stress runs up to 24 concurrent tests