@@ -5,6 +5,7 @@ Phoronix Test Suite (Git)
 - pts-core: Start moving possible deployment scripts into deploy/ directory
 - pts-core: Move phoromatic-client and phoromatic-server Upstart job files to deploy/
 - pts-core: Move phoromatic-client and phoromatic-server systemd service files to deploy/
+- pts-core: Add very basic result-file-to-json sub-command
 - Pull in JuJu scripts from https://github.com/juju-solutions/pts to deploy/juju
 
 Phoronix Test Suite 5.6.0-Dedilovo
